Add SVN properties to a bunch of other files

--- a/NUS Downloader/TODO
+++ b/NUS Downloader/TODO
@@ -1,3 +1,10 @@
+///////////////////////////////////////
+// NUS Downlodaer: TODO              //
+// $Rev::                          $ //
+// $Author::                       $ //
+// $Date::                         $ //
+///////////////////////////////////////
+
 Make more compatible with mono.
 Finish scripting improvements.
 
