Fixed IOS patching Unchecking all IOS patches now also unchecks main IOS patch checkbox Increased size of header, in hope that the date won't be cut off... Changed TODO list stuff
VERIFIED UNDER:
Windows

TO VERIFY:
Linux (not sure if outputting WADs correctly, should be checked)
Mac OS X (not such a priority, as mono can be quite hard to set up on OS X)

--- a/NUS Downloader/TODO
+++ b/NUS Downloader/TODO
@@ -1,15 +1,14 @@
-///////////////////////////////////////
-// NUS Downlodaer: TODO              //
-// $Rev::                          $ //
-// $Author::                       $ //
-// $Date::                         $ //
-///////////////////////////////////////
+///////////////////////////////////////////
+// NUS Downloader: TODO                  //
+// $Rev::                              $ //
+// $Author::                           $ //
+// $Date::                             $ //
+///////////////////////////////////////////
 
 Make more compatible with mono for Linux.
 Broken stuff:
- - Downloading anything
- - Bottom part of dialog cut off
 Working stuff:
+ - Downloading anything
  - Displaying Form1
  - Loading database
  - Generating update scripts
